infra/go-demo-app/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: go-demo-app-gateway
  namespace: go-demo-app
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "go-demo-app.${CLUSTER_DOMAIN}"
    port: 80
    protocol: HTTP
  - name: https
    hostname: "go-demo-app.${CLUSTER_DOMAIN}"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: go-demo-app-tls
        kind: Secret
